--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
 
     <nav>
 
-        <a href="#CV">CV</a>
+        <p><a href="#CV">CV</a></p>
         <p><a href="Hobbies.html">Hobbies</a></p>
         <p><a href="contact.html">Contact</a></p>
 
